2003-02-08  Petr Stehlik  <pstehlik@sophics.cz>

* atari_sdl.c: signal keyboard interrupt only when it's enabled
  (bugfix copied from input.c where it was fixed by Piotr)
* configure.in, acconfig.h: autoconf 2.5x required again. OS/2 and other
  platforms with old autoconf can use the pre-generated configure script
  found in released versions.
* atari_curses.c: exit() was not defined so I replaced it by return.
* atari_x11.c: some variables are used only if SHM is not defined
* configure.in, ui_basic.c: "CURSES" replaced by "USE_CURSES" so that
  compiler doesn't complain about a redefined stuff
* pokeysnd.c: null functions defined properly to avoid compiler warnings


2003-02-04  Petr Stehlik  <pstehlik@sophics.cz>

* configure.in, acconfig.h: after few days of autoconf 2.5x support I
  rolled back the changes since Ken Ames had a problem with upgrading
  autoconf on OS/2.

** tagged as 1.2.9

2003-01-27  Perry McFarlane  <ce596@torfree.net>

  I am going to send my cycle-exact patch now because I don't have any
  more time to work on it.  Hopefully it will be useful.  I hope
  it is not a problem to apply the patches.  I tried to make them
  to the current version.  They need more testing, though.
  In particular state saving is not tested.

  I have been working over the past few weeks on some improvements
  to the Atari800 emulator.
  I wanted to add support for mid-scanline changes to colours
  and players which are used by some (few) games and demos.
  I have written some code that does this, as a patch to
  the current code base.
  To avoid using the new code './configure --disable-cycleexact'
  This patch will fix display bugs in Master of the Lamps,
  Mail order monsters etc.
  However there were still a few bugs in some programs (see BUGS)
  and I haven't had time to fully test it.   I also have run out
  of personal time to work on this code for a while so I won't have
  much time to maintain it.   I think I should submit it now and